# valkeylite

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml  setup.py  test_wheel.py
.github/workflows/: build-and-release.yml  check-valkey-release.yml  pr-tests.yml
scripts/: update_valkey_version.py
src/valkey_server/: __init__.py  __main__.py  _binary.py  config.py  exceptions.py  port_finder.py  pytest_plugin.py  server.py
src/valkeylite/: __init__.py  __main__.py  _binary.py  client.py  config.py  exceptions.py  port_finder.py  pytest_plugin.py  server.py
tests/: __init__.py  conftest.py  test_config.py  test_import.py  test_port_finder.py
